@@ -1,3 +1,5 @@
+* Ensure the `selector` argument of select()/match() is not undefined/null. [jddalton]
+
 * Update jQuery adapters to support the `header/footer` properties and make `:has`, `:first`, and `:last` work with non tagName selectors. [jddalton]
 
 * Remove document check from `:lang` selector. [Diego Perini]
